test/e2e/features/podlocalityxds/testdata/route-extra.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: locality-route-extra
  namespace: kgateway-base
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-base
  hostnames:
    - "locality-extra.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /extra
      backendRefs:
        - name: backend
          port: 80
